--- a/index.html
+++ b/index.html
@@ -155,7 +155,10 @@
                         color: white;
                       "
                     >
-                      <img src="/img/logo.png" />
+                      <img
+                        src="https://github.com/Bleulens/cp-email/raw/main/img/production/logo.png"
+                        alt="logo"
+                      />
                       <h2
                         style="
                           padding: 25px 0 10px;
@@ -286,7 +289,8 @@
                       style="padding-top: 20px"
                     >
                       <img
-                        src="/img/smartwatch.png"
+                        src="https://github.com/Bleulens/cp-email/raw/main/img/production/smartwatch.png"
+                        alt="smartwatch"
                         style="position: relative; bottom: -4px"
                       />
                     </td>
@@ -335,7 +339,12 @@
                         style="padding: 0"
                       >
                         <tr>
-                          <td><img src="/img/bell_icon.png" /></td>
+                          <td>
+                            <img
+                              src="https://github.com/Bleulens/cp-email/raw/main/img/production/bell_icon.png"
+                              alt="bell"
+                            />
+                          </td>
                           <td
                             style="
                               font-family: 'Open Sans', 'Helvetica Neue',
@@ -408,7 +417,12 @@
                         style="padding: 0"
                       >
                         <tr>
-                          <td><img src="/img/share_icon.png" /></td>
+                          <td>
+                            <img
+                              src="https://github.com/Bleulens/cp-email/raw/main/img/production/share_icon.png"
+                              alt="share"
+                            />
+                          </td>
                           <td
                             style="
                               font-family: 'Open Sans', 'Helvetica Neue',
@@ -481,7 +495,12 @@
                         style="padding: 0"
                       >
                         <tr>
-                          <td><img src="/img/wifi_icon.png" /></td>
+                          <td>
+                            <img
+                              src="https://github.com/Bleulens/cp-email/raw/main/img/production/wifi_icon.png"
+                              alt="wifi"
+                            />
+                          </td>
                           <td
                             style="
                               font-family: 'Open Sans', 'Helvetica Neue',
@@ -560,7 +579,11 @@
                       align="center"
                       ;
                     >
-                      <img src="/img/image_head.jpg" class="image-head" />
+                      <img
+                        src="https://github.com/Bleulens/cp-email/raw/main/img/production/image_head.jpg"
+                        alt="head"
+                        class="image-head"
+                      />
                     </td>
                   </tr>
                   <tr>
@@ -619,7 +642,10 @@
                         </tr>
                         <tr>
                           <td align="right" class="left-store">
-                            <img src="img/appstore.png" />
+                            <img
+                              src="https://github.com/Bleulens/cp-email/raw/main/img/production/appstore.png"
+                              alt="appstore"
+                            />
                           </td>
                         </tr>
                       </table>
@@ -653,7 +679,10 @@
                         </tr>
                         <tr>
                           <td align="left" class="right-store">
-                            <img src="img/playstore.png" />
+                            <img
+                              src="https://github.com/Bleulens/cp-email/raw/main/img/production/playstore.png"
+                              alt="playstore"
+                            />
                           </td>
                         </tr>
                       </table>
@@ -676,7 +705,13 @@
                   style="padding: 50px 0; background: #141414"
                 >
                   <tr>
-                    <td><img src="img/one_app.jpg" style="width: 100%" /></td>
+                    <td>
+                      <img
+                        src="https://github.com/Bleulens/cp-email/raw/main/img/production/one_app.jpg"
+                        alt="one_app"
+                        style="width: 100%"
+                      />
+                    </td>
                   </tr>
                 </table>
               </td>
@@ -731,7 +766,10 @@
                       >
                         <tr>
                           <td align="center">
-                            <img src="img/watch_screen.png" />
+                            <img
+                              src="https://github.com/Bleulens/cp-email/raw/main/img/production/watch_screen.png"
+                              alt="watch_screen"
+                            />
                           </td>
                         </tr>
                         <tr>
@@ -799,7 +837,10 @@
                       >
                         <tr>
                           <td align="center">
-                            <img src="img/watch_screen.png" />
+                            <img
+                              src="https://github.com/Bleulens/cp-email/raw/main/img/production/watch_screen.png"
+                              alt="watch_screen"
+                            />
                           </td>
                         </tr>
                         <tr>
@@ -867,7 +908,10 @@
                       >
                         <tr>
                           <td align="center">
-                            <img src="img/watch_screen.png" />
+                            <img
+                              src="https://github.com/Bleulens/cp-email/raw/main/img/production/watch_screen.png"
+                              alt="watch_screen"
+                            />
                           </td>
                         </tr>
                         <tr>
@@ -976,7 +1020,12 @@
                                     cellpadding="0"
                                     border="0"
                                   >
-                                    <td><img src="img/phone_icon.png" /></td>
+                                    <td>
+                                      <img
+                                        src="https://github.com/Bleulens/cp-email/raw/main/img/production/phone_icon.png"
+                                        alt="phone"
+                                      />
+                                    </td>
                                     <td
                                       style="
                                         font-family: 'Open Sans',
@@ -1036,7 +1085,10 @@
                                     border="0"
                                   >
                                     <td>
-                                      <img src="img/phone_icon-48.png" />
+                                      <img
+                                        src="https://github.com/Bleulens/cp-email/raw/main/img/production/phone_icon-48.png"
+                                        alt="phone-48"
+                                      />
                                     </td>
                                     <td
                                       style="
@@ -1116,7 +1168,12 @@
                                     cellpadding="0"
                                     border="0"
                                   >
-                                    <td><img src="img/check_icon.png" /></td>
+                                    <td>
+                                      <img
+                                        src="https://github.com/Bleulens/cp-email/raw/main/img/production/check_icon.png"
+                                        alt="check"
+                                      />
+                                    </td>
                                     <td
                                       style="
                                         font-family: 'Open Sans',
@@ -1176,7 +1233,10 @@
                                     border="0"
                                   >
                                     <td>
-                                      <img src="img/settings_icon.png" />
+                                      <img
+                                        src="https://github.com/Bleulens/cp-email/raw/main/img/production/settings_icon.png"
+                                        alt="settings"
+                                      />
                                     </td>
                                     <td
                                       style="
@@ -1256,7 +1316,12 @@
                                     cellpadding="0"
                                     border="0"
                                   >
-                                    <td><img src="img/menu_icon.png" /></td>
+                                    <td>
+                                      <img
+                                        src="https://github.com/Bleulens/cp-email/raw/main/img/production/menu_icon.png"
+                                        alt="menu"
+                                      />
+                                    </td>
                                     <td
                                       style="
                                         font-family: 'Open Sans',
@@ -1316,7 +1381,10 @@
                                     border="0"
                                   >
                                     <td>
-                                      <img src="img/share_icon.png" />
+                                      <img
+                                        src="https://github.com/Bleulens/cp-email/raw/main/img/production/share_icon.png"
+                                        alt="share"
+                                      />
                                     </td>
                                     <td
                                       style="
@@ -1486,12 +1554,16 @@
                         <tr>
                           <td align="center">
                             <a href="https:/www.twitter.com/" target="_blank"
-                              ><img src="img/twitter_icon.png"
+                              ><img
+                                src="https://github.com/Bleulens/cp-email/raw/main/img/production/twitter_icon.png"
+                                alt="twitter"
                             /></a>
                           </td>
                           <td align="center">
                             <a href="https:/www.facebook.com/" target="_blank">
-                              <img src="img/facebook_icon.png"
+                              <img
+                                src="https://github.com/Bleulens/cp-email/raw/main/img/production/facebook_icon.png"
+                                alt="facebook"
                             /></a>
                           </td>
                           <td align="center">
@@ -1501,7 +1573,9 @@
                           </td>
                           <td align="center">
                             <a href="https:/www.pinterest.com/" target="_blank"
-                              ><img src="img/pinterest_icon.png"
+                              ><img
+                                src="https://github.com/Bleulens/cp-email/raw/main/img/production/pinterest_icon.png"
+                                alt="pinterest"
                             /></a>
                           </td>
                           <td align="center">
