--- a/index.html
+++ b/index.html
@@ -1585,7 +1585,7 @@
                           </td>
                           <td align="center">
                             <a href="https:/www.youtube.com/" target="_blank">
-                              <img src="img/youtube_icon.png"
+                              <img src="img/youtube_icon.png" alt="youtube"
                             /></a>
                           </td>
                         </tr>
