--- a/index.html
+++ b/index.html
@@ -1585,7 +1585,9 @@
                           </td>
                           <td align="center">
                             <a href="https:/www.youtube.com/" target="_blank">
-                              <img src="img/youtube_icon.png" alt="youtube"
+                              <img
+                                src="https://github.com/Bleulens/cp-email/raw/main/img/production/youtube_icon.png"
+                                alt="youtube"
                             /></a>
                           </td>
                         </tr>
