--- a/index.html
+++ b/index.html
@@ -1568,7 +1568,9 @@
                           </td>
                           <td align="center">
                             <a href="https:/www.google.com/" target="_blank"
-                              ><img src="img/google_icon.png"
+                              ><img
+                                src="https://github.com/Bleulens/cp-email/raw/main/img/production/google_icon.png"
+                                alt="google"
                             /></a>
                           </td>
                           <td align="center">
@@ -1580,7 +1582,9 @@
                           </td>
                           <td align="center">
                             <a href="https:/www.linkedin.com/" target="_blank"
-                              ><img src="img/linkedin_icon.png"
+                              ><img
+                                src="https://github.com/Bleulens/cp-email/raw/main/img/production/linkedin_icon.png"
+                                alt="linkedin"
                             /></a>
                           </td>
                           <td align="center">
